working fly sqllite

--- a/fly.toml
+++ b/fly.toml
@@ -1,16 +1,18 @@
-# fly.toml app configuration file generated for ccfciv-qr-generator on 2024-01-14T09:27:41-08:00
+# fly.toml app configuration file generated for ccfciv-qr-generator on 2024-01-14T22:13:18-08:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
 app = "ccfciv-qr-generator"
-primary_region = "ord"
+primary_region = "lax"
 console_command = "/rails/bin/rails console"
 
 [build]
 
-[deploy]
-  release_command = "./bin/rails db:prepare"
+[[mounts]]
+  source = "data"
+  destination = "/data"
+  auto_extend_size_threshold = 0
 
 [http_service]
   internal_port = 3000
